<resources>
    <string name="app_name">FlashMath</string>
    <string name="math_is_fun">Math is fun!</string>
    <string name="level">Level:</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name ="type">Type:</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name = "start_game">START GAME</string>
    <string name = "blank" > I am a play Game screen</string>
    <string name = "settings"> Settings </string>
    <string name = "user">User:</string>
    <string name="one" >1</string>
    <string name="two" >2</string>
    <string name="three" >3</string>
    <string name="four" >4</string>
    <string name="five" >5</string>
    <string name="six" >6</string>
    <string name="seven" >7</string>
    <string name="eight" >8</string>
    <string name="nine" >9</string>
    <string name="zero">0</string>
    <string name="timer">:60</string>
    <string name="plus">+</string>
    <string name="delete">Delete</string>
    <string name="go">GO!</string>
    <string name="gameover">TIME\'S UP!</string>
    <string name="won">WON: </string>
    <string name="play_again">Play Again</string>
    <string name="back_home">Back to Home</string>
    <string name ="settings_text">I am the settings Screen</string>
    <string name="save">Save</string>
    <string name="cash">Cash In!</string>
    <string name="correcttext">Correct!</string>
    <string name="incorrecttext">Sorry, Incorrect!</string>
    <string name="needToSelect">Select Level, Type, and User to Start Game!</string>
    <string name="ok">OK</string>
    <string name="congratsCashIn">Congrats! You cashed in!</string>
    <!--<string name="starScore"></string>-->
</resources>
