<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:columnCount="3"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <!--//one-->
        <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//two-->
        <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//three-->
        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//four-->
        <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//five-->
        <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//six-->
        <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//seven-->
        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//eight-->
        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!--//nine-->
        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

        <!-- zero-->
        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:layout_height="50dp"
            android:layout_width="85dp"/>

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/gridLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/gridLayout">
        <!-- delete-->
        <!-- go-->
        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:background = "#cc0000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            android:id="@+id/go"
            android:text="@string/go"
            android:background="#008000"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0" />


    </GridLayout>

</RelativeLayout>